Updatedd the files

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Curse Word!</h1>
+    <p>Made a public apology!</p>
+    <h2>Breaking news: Sam not Fired!</h2>
 </body>
 </html>
